Fixed klaviyo icon alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -407,15 +407,22 @@ nav.active {
   }
 }
 
-.skill-icons div {
+.skill {
+  width: 6rem;
+  height: 7rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 .icon {
   width: 4rem;
-  margin-bottom: 1em;
+}
+
+.icon.klaviyo {
+  margin-top: 1em;
 }
 
 .projects {
